2001-10-12  Jeffrey Stedfast  <fejj@ximian.com>

	* gmime-part.c (g_mime_part_write_to_stream): No longer takes a
	'toplevel' argument.
	(g_mime_part_to_string): No longer takes a 'toplevel' argument.

	* gmime-message.c (g_mime_message_write_to_stream): Write the
	MIME-Version header here instead of needing to pass a 'toplevel'
	argument to g_mime_part_write_to_stream().

	* gmime-charset.c (g_mime_charset_init): Fix for Debian and
	Solaris.

2001-10-09  Charles Kerr <charles@rebelbase.com>

	* gmime-filter.c (g_mime_filter_construct): make sure outptr is
	zeroed out before we read it in g_mime_filter_set_size().

2001-10-06  Jeffrey Stedfast  <fejj@ximian.com>

	* gmime-filter-basic.c (filter_filter): Implemented uuencoding.
	(filter_complete): Implemented uuencoding.

	* gmime-utils.c (g_mime_utils_uuencode_close): New function to
	flush the uuencoder.
	(g_mime_utils_uuencode_step): New function to uuencode a block of
	data.

2001-10-05  Jeffrey Stedfast  <fejj@ximian.com>

	Fixes for c++ compilation

	* gmime-stream*.c: s/template/stream_template

	* gmime-filter*.c: s/template/filter_template

2001-10-04  Jeffrey Stedfast  <fejj@ximian.com>

	* gmime-data-wrapper.c (g_mime_data_wrapper_set_stream): If we
	just change the order of operations, we can get away without a
	second stream pointer.

	* gmime-stream.c (g_mime_stream_substream): Revert.

	* gmime-stream-buffer.c (stream_substream): Instead of calling
	g_mime_stream_substream(), call the source stream's substream
	method directly. I think this is the better fix for the bug
	Charles just fixed.

2001-10-04  Charles Kerr <charles@rebelbase.com>

	* gmime-stream.c (g_mime_stream_substream): fix refcount stealth
	bug.  Calling this on a buffered stream wound up reffing two
	streams instead of one because of a nested call to
	g_mime_stream_substream().  This took a lot of scaffolding to
	find. :)

	* gmime-data-wrapper.c (g_mime_data_wrapper_set_stream): fix